--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "google-map-react": "^2.2.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +21,7 @@
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
